@@ -1,7 +1,7 @@
 #/*! \page config_macros Default configuration: @RPMCONFIGDIR@/macros
 # \verbatim
 #
-# $Id: macros.in,v 1.152 2004/10/09 20:22:01 jbj Exp $
+# $Id: macros.in,v 1.153 2004/10/15 00:14:29 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -727,7 +727,7 @@ print (t)\
 #	Note: the %_vsflags_erase applies to --upgrade/--freshen modes as
 #	well as --erase.
 #
-%__vsflags		0
+%__vsflags		0xf0000
 %_vsflags_build		%{__vsflags}
 %_vsflags_erase		%{__vsflags}
 %_vsflags_install	%{__vsflags}
